--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="">
+          <img src="./img/carusel_1.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>DIY Satellite Ground Station</h1>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="item">
-          <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="">
+          <img src="./img/workinprogress.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>A work in progress.</h1>
