--- a/documentation.html
+++ b/documentation.html
@@ -45,10 +45,10 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
+                <li class="active dropdown">
+                  <a href="documentation.html" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="documentation.html">Overview</a></li>
                     <li><a href="#">Software</a></li>
@@ -65,64 +65,17 @@
       </div>
     </div>
 
+    <div class="container">
 
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="./img/carusel_1.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>DIY Satellite Ground Station</h1>
-              <p>SatNOGS is an open source ground station, optimized for modularity, built from readily availbale and affordable tools and resources.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="./img/workinprogress.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>A work in progress.</h1>
-              <p>Part of NASA's <a href="https://2014.spaceappschallenge.org">SpaceAppsChallenge 2014</a>, we set off to create a solution for the <a href="https://2014.spaceappschallenge.org">Ground Station Platform challenge</a>. We are moving fast so keep checking this page!</p>
-              <p><a class="btn btn-lg btn-primary" href="https://github.com/satnogs" role="button">See our code</a></p>
-            </div>
-          </div>
+      <div class="container main-text">
+        <h2>Intro</h2>
+        SatNOGS is a modular and scalable stack for Satellite Ground Station implementation. Fully based on open source technologies and open standards, it provides interoperability with existing or future subsystems.
+        <h2>The Stack</h2>
+        The stack can be vizualized as follows:
+        <div class="container stack">
+          <img src="./img/stack.png">
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div><!-- /.carousel -->
-
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="">
-          <h2>Satellite</h2>
-          <p>We love satellites! <br>And there are thousands of them up there. SatNOGS provides a scalable and modular platform to communicate with them.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="">
-          <h2>Networked</h2>
-          <p>Sticking to modular architecture based on network communications we ensure remote access and interchangable design meeting all possible needs.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="">
-          <h2>Open</h2>
-          <p>True to our values, we fuel our passion with Open Source practices in both software and hardware. Help us by contributing to the project, making it better one commit at the time.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
 
 
       <!-- START THE FEATURETTES 
