--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="documentation.html">Overview</a></li>
-                    <li><a href="#">Software</a></li>
-                    <li><a href="#">Hardware</a></li>
+                    <li><a href="software.html">Software</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
                 <li><a href="#contact">Team</a></li>
@@ -76,12 +75,12 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="./img/carusel_1.jpg" alt="">
+          <img src="./img/carusel_0.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>DIY Satellite Ground Station</h1>
               <p>SatNOGS is an open source ground station, optimized for modularity, built from readily availbale and affordable tools and resources.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="./documentation.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
