Team page and image additions

--- a/hardware.html
+++ b/hardware.html
@@ -54,7 +54,7 @@
                     <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
-                <li><a href="#contact">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -82,7 +82,7 @@
           <p class="lead">Designed and build with mobility in mind, this lightweight tripod is made of 3D-printed parts alluminium profiles and bolts to keep everything together.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="./img/tripod.png" alt="Generic placeholder image">
         </div>
       </div>
 
