--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active dropdown">
+                <li class="dropdown">
                   <a href="documentation.html" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="documentation.html">Overview</a></li>
@@ -54,8 +54,8 @@
                     <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="team.html">Team</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -67,63 +67,36 @@
     <div class="container">
 
       <div class="container main-text">
-        <h2 class="featurette-heading">Intro</h2>
-        <p class="lead">SatNOGS is a modular and scalable stack for Satellite Ground Station implementation. Fully based on open source technologies and open standards, it provides interoperability with existing or future subsystems.</p>
-        <h2 class="featurette-heading">The Stack</h2>
-        <p class="lead">The stack can be vizualized as follows:</p>
-        <div class="container stack">
-          <a href="./img/stack.png">
-            <img src="./img/stack.png">
-          </a>
-          <a href="./img/stack_gpredict.png">
-            <img src="./img/stack_gpredict.png">
-          </a>
+        <h2 class="featurette-heading">Team</h2>
+        <p class="lead">SatNOGS project is a collaborative open project developed initially as part of NASA SpaceApps Challenge 2014 in hackerspace.gr Athens location.</p>
+        <p class="lead">The core team members are listed below in alphabetical order with their main focus areas.</p>
+        <p class="lead">
+          <ul class="lead">
+            <li>Ioannis Charitopoulos <span class="area">(prediction & tracking software)</span></li>
+            <li>Nikitas Chronas <span class="area">(tracking harware design and arduino code)</span></li>
+            <li>Evangelos Diamantis <span class="area">(onboard computer setup)</span></li>
+            <li>Theodore Dimitriou <span class="area">(tracking mechanism design)</span></li>
+            <li>Themistoklis Karafasoulis <span class="area">(antenna construction)</span></li>
+            <li>Dimitrios Papadeas <span class="area">(tripod design and 3D printing)</span></li>
+            <li>Pierros Papadeas <span class="area">(documentation, website and hardware design)</span></li>
+            <li>Manthos Papamatthaiou <span class="area">(tracking mechanism design and 3D printing)</span></li>
+            <li>Nikos Roussos <span class="area">(Web enabled SDR setup)</span></li>
+            <li>Vasilis Tsiligiannis <span class="area">(antenna design, SDR and tracking setup)</span></li>            
+            <li>Agisilaos Zisimatos <span class="area">(tracking harware design and arduino code)</span></li>
+          </ul>
+          <img id="team" src="./img/carusel_1.jpg">
+        </p>
+        <h2 class="featurette-heading">Contributing</h2>
+        <p class="lead">SatNOGS project is in design phase and wants your contributions! We are looking for Satellite enthusiasts, HAM operators, tracking hardware experts, software ninjas that know why SDP8 is better than SGP4, and generally for space enthusiasts that would like to build and/or contribute to our project.</p>
+        <div class="col-md-6 middle">
+          <p><a class="btn btn-lg btn-primary" href="http://github.com/satnogs" role="button">Contribute on Github</a></p>
         </div>
-      </div>
-
-
-      <!-- START THE FEATURETTES 
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <div class="col-md-6 middle">
+          <p><a class="btn btn-lg btn-primary" href="./contact.html" role="button">Contact Us</a></p>
         </div>
       </div>
 
       <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-       /END THE FEATURETTES -->
-
 
       <!-- FOOTER -->
       <footer>
