--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
-                <li><a href="#contact">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
