New contact page and updated index

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active dropdown">
+                <li class="dropdown">
                   <a href="documentation.html" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="documentation.html">Overview</a></li>
@@ -55,7 +55,7 @@
                   </ul>
                 </li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -67,53 +67,12 @@
     <div class="container">
 
       <div class="container main-text">
-        <h2 class="featurette-heading">Software</h2>
-        <p class="lead">SatNOGS includes an open-source modular software stack, developed from scratch or utilizing existing projects. The versatilty of the architecture enables communication with existing software or easy development of custom software for specific needs.</p>
-      </div>
-
-
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h4 class="featurette-heading">Tracking<br><span class="text-muted">Precise, standardized</span></h4>
-          <p class="lead">Two options for tracking are available. Operators may use the popular GPredict for real-time satellite tracking and orbit prediction or a custom build solution in Python that provides API for custom or remote unattended tracking. Both solutions are communicating with the mount using rotctld over Easycomm protocol.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="./img/gpredict.jpg" alt="Generic placeholder image">
-        </div>
+        <h2 class="featurette-heading">Contact</h2>
+        <p class="lead">You may contact the SatNOGS team using our email info (at) satnogs.org</p>
+        <p class="lead">Even better, go ahead and post suggestions and ideas (even solutions to problems!) via github as <a href="https://github.com/satnogs">issues in our repositories</a>!</p>
       </div>
 
       <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="./img/gpredict-sch.jpg" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-7">
-          <h4 class="featurette-heading">Scheduling and management<br><span class="text-muted">Extendable, remote</span></h4>
-          <p class="lead">Using Gpredict or SatNOGS custom scheduling and management interface an operator can plan her observation session efficiently. SatNOGS project is also creating a global management interface for operators combining multiple ground stations for imporved coverage around the globe.</p>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h4 class="featurette-heading">Software defined radio<br><span class="text-muted">Fast, versatile</span></h4>
-          <p class="lead">Multiple options are available for software defined radio. All of them based on GNURadio can handle radio tuning, receiving and decoding in a variety of modulations. Our default stack includes Gqrx (a GTK SDR) and ShinySDR (a web-based SDR for remote operations).</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="./img/sdr.jpg" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
 
       <!-- FOOTER -->
       <footer>
