--- a/documentation.html
+++ b/documentation.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <img src="./img/satnogs-logo-header-20.png">
               </a>
             </div>
@@ -55,7 +55,7 @@
                   </ul>
                 </li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
