--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <img src="./img/satnogs-logo-header-20.png">
               </a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -55,7 +55,7 @@
                   </ul>
                 </li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -104,37 +104,35 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="">
-          <h2>Satellite</h2>
-          <p>We love satellites! <br>And there are thousands of them up there. SatNOGS provides a scalable and modular platform to communicate with them.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="./img/sdr-200.jpg" alt="">
+          <h2>Software</h2>
+          <p>Scheduling, remote operation, tracking and SDR software are components of our software stack.</p>
+          <p><a class="btn btn-default" href="software.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="">
-          <h2>Networked</h2>
-          <p>Sticking to modular architecture based on network communications we ensure remote access and interchangable design meeting all possible needs.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="./img/hardware-200.jpg" alt="">
+          <h2>Hardware</h2>
+          <p>Tracking mechanism, antennas, tripod and electronics are all included in SatNOGS!</p>
+          <p><a class="btn btn-default" href="hardware.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="">
-          <h2>Open</h2>
-          <p>True to our values, we fuel our passion with Open Source practices in both software and hardware. Help us by contributing to the project, making it better one commit at the time.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="./img/team-200.jpg" alt="">
+          <h2>Team</h2>
+          <p>We are a group of passionate enthusiasts of space technologies, hackers, tinkers, code ninjas and diyers.</p>
+          <p><a class="btn btn-default" href="team.html" role="button">Join Us &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
 
-      <!-- START THE FEATURETTES 
-
       <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Satellites</h2>
+          <p class="lead">We love satellites! And there are thousands of them up there. SatNOGS provides a scalable and modular platform to communicate with them.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-circle img-responsive" src="./img/satellites.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -142,11 +140,11 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-circle img-responsive" src="./img/networked.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Networked</h2>
+          <p class="lead">Sticking to modular architecture based on network communications we ensure remote access and interchangable design meeting all possible needs.</p>
         </div>
       </div>
 
@@ -154,11 +152,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Open</h2>
+          <p class="lead">True to our values, we fuel our passion with Open Source practices in both software and hardware. Help us by contributing to the project, making it better one commit at the time.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-circle img-responsive" src="./img/open.png" alt="Generic placeholder image">
         </div>
       </div>
 
