--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <img src="./img/satnogs-logo-header-20.png">
               </a>
             </div>
