Updated links on Hardware and Software pages

--- a/hardware.html
+++ b/hardware.html
@@ -80,6 +80,7 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Tripod<br><span class="text-muted">Portable, easy to assemble</span></h4>
           <p class="lead">Designed and build with mobility in mind, this lightweight tripod is made of 3D-printed parts alluminium profiles and bolts to keep everything together.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Tripod" role="button">View designs</a></p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/tripod.png" alt="Generic placeholder image">
@@ -95,6 +96,7 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Tracking mechanism<br><span class="text-muted">Printable, parametric</span></h4>
           <p class="lead">Our tracking mechanism is designed from scratch, parametric by default, 3D printed in under 8 hours. Utilizing two NEMA14 stepper motors we have uncostrained movement in Altitude and Azimuth.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Tracking%20box" role="button">View designs</a></p>
         </div>
       </div>
 
@@ -104,6 +106,7 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Driving electronics<br><span class="text-muted">Open-source, accurate</span></h4>
           <p class="lead">Two Stepper motor drivers and an Arduino controlling them, are our driving electronics. Simple yet accurate.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-arduino" role="button">Further details</a></p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/driver.jpg" alt="Generic placeholder image">
@@ -119,6 +122,7 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Antennas<br><span class="text-muted">Custom, modular</span></h4>
           <p class="lead">Lightweight antennas designed to meet satellite communication specifications. SatNOGS includes designs and how-tos for 70cm and 2m band Yagi antennas. Parabolic antenna design is in the works too.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Yagi%20antenna" role="button">View designs</a></p>
         </div>
       </div>
 
@@ -128,6 +132,7 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Single-board computer<br><span class="text-muted">Integrated, low power</span></h4>
           <p class="lead">Our primary configuration includes the <a href="http://beagleboard.org/Products/BeagleBone+Black">BeagleBone Black</a> or the <a href="http://wiki.openwrt.org/toh/tp-link/tl-wr703n">TP-Link TL-WR703N</a> as a single-board computer. Running Debian or OpenWrt, exposes all ground station functionality (status, tracking, signal receiving and processing) over LAN or WiFi for extreme mobility or remote operation.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-software/tree/master/openwrt" role="button">View configuration</a></p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/tplink.jpg" alt="Generic placeholder image">
