--- a/software.html
+++ b/software.html
@@ -80,6 +80,10 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Tracking<br><span class="text-muted">Precise, standardized</span></h4>
           <p class="lead">Two options for tracking are available. Operators may use the popular GPredict for real-time satellite tracking and orbit prediction or a custom build solution in Python that provides API for custom or remote unattended tracking. Both solutions are communicating with the mount using rotctld over Easycomm protocol.</p>
+          <p>
+            <a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-software/tree/master/satlocator" role="button">SatNOGS tracking software </a>
+            <a class="btn btn-default btn-primary" href="http://gpredict.oz9aec.net/" role="button">GPredict</a>
+          </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/gpredict.jpg" alt="Generic placeholder image">
@@ -95,6 +99,7 @@
         <div class="col-md-7">
           <h4 class="featurette-heading">Scheduling and management<br><span class="text-muted">Extendable, remote</span></h4>
           <p class="lead">Using Gpredict or SatNOGS custom scheduling and management interface an operator can plan her observation session efficiently. SatNOGS project is also creating a global management interface for operators combining multiple ground stations for imporved coverage around the globe.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-software/tree/master/satlocator" role="button">View code</a></p>
         </div>
       </div>
 
@@ -103,7 +108,11 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h4 class="featurette-heading">Software defined radio<br><span class="text-muted">Fast, versatile</span></h4>
-          <p class="lead">Multiple options are available for software defined radio. All of them based on GNURadio can handle radio tuning, receiving and decoding in a variety of modulations. Our default stack includes Gqrx (a GTK SDR) and ShinySDR (a web-based SDR for remote operations).</p>
+          <p class="lead">Multiple options are available for software defined radio. All of them based on GNURadio can handle radio tuning, receiving and decoding in a variety of modulations. Our default stack includes Gqrx (a GTK SDR), ShinySDR (a web-based SDR for remote operations) and a custom built solution.</p>
+          <p>
+            <a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-software/tree/master/simplesdr" role="button">View code</a>
+            <a class="btn btn-default btn-primary" href="http://gqrx.dk/" role="button">Gqrx</a>
+          </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/sdr.jpg" alt="Generic placeholder image">
