Minor spelling fixes

--- a/hardware.html
+++ b/hardware.html
@@ -77,19 +77,6 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7">
-          <h4 class="featurette-heading">Tripod<br><span class="text-muted">Portable, easy to assemble</span></h4>
-          <p class="lead">Designed and build with mobility in mind, this lightweight tripod is made of 3D-printed parts alluminium profiles and bolts to keep everything together.</p>
-          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Tripod" role="button">View designs</a></p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="./img/tripod.png" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/exploded.png" alt="Generic placeholder image">
         </div>
@@ -155,6 +142,19 @@
             radio transceivers) through the usage of rigctld (part of
             <a href="http://sourceforge.net/apps/mediawiki/hamlib/index.php?title=Main_Page">Ham Lib project</a>).
           </p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h4 class="featurette-heading">Tripod<br><span class="text-muted">Portable, easy to assemble</span></h4>
+          <p class="lead">Designed and build with mobility in mind, this lightweight tripod is made of 3D-printed parts and  alluminium profiles. Bolts to keep everything together.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Tripod" role="button">View designs</a></p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="./img/tripod.png" alt="Generic placeholder image">
         </div>
       </div>
 
