--- a/software.html
+++ b/software.html
@@ -98,7 +98,7 @@
         </div>
         <div class="col-md-7">
           <h4 class="featurette-heading">Scheduling and management<br><span class="text-muted">Extendable, remote</span></h4>
-          <p class="lead">Using Gpredict or SatNOGS custom scheduling and management interface an operator can plan her observation session efficiently. SatNOGS project is also creating a global management interface for operators combining multiple ground stations for imporved coverage around the globe.</p>
+          <p class="lead">Using Gpredict or SatNOGS custom scheduling and management interface an operator can plan her observation session efficiently. SatNOGS project is also creating a global management interface for operators combining multiple ground stations for improved coverage around the globe.</p>
           <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-software/tree/master/satlocator" role="button">View code</a></p>
         </div>
       </div>
