--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@
         <p class="lead">The core team members are listed below in alphabetical order with their main focus areas.</p>
         <p class="lead">
           <ul class="lead">
-            <li>Ioannis Charitopoulos <span class="area">(prediction & tracking software)</span></li>
+            <li>Ioannis Charitopoulos <span class="area">(prediction & tracking software, APIs)</span></li>
             <li>Nikitas Chronas <span class="area">(tracking harware design and arduino code)</span></li>
             <li>Evangelos Diamantis <span class="area">(onboard computer setup)</span></li>
             <li>Theodore Dimitriou <span class="area">(tracking mechanism design)</span></li>
