--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="col-lg-4">
           <img class="img-circle" src="./img/team-200.jpg" alt="">
           <h2>Team</h2>
-          <p>We are a group of passionate enthusiasts of space technologies, hackers, tinkers, code ninjas and diyers.</p>
+          <p>We are a group of passionate enthusiasts of space technologies, hackers, tinkerers, code ninjas and diyers.</p>
           <p><a class="btn btn-default" href="team.html" role="button">Join Us &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
