--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>DIY Satellite Ground Station</h1>
-              <p>SatNOGS is an open source ground station, optimized for modularity, built from readily availbale and affordable tools and resources.</p>
+              <p>SatNOGS is an open source ground station, optimized for modularity, built from readily available and affordable tools and resources.</p>
               <p><a class="btn btn-lg btn-primary" href="./documentation.html" role="button">Learn more</a></p>
             </div>
           </div>
