--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,9 @@
 
       <div class="container main-text">
         <h2 class="featurette-heading">Contact</h2>
-        <p class="lead">You may contact the SatNOGS team using our email info (at) satnogs.org</p>
-        <p class="lead">Even better, go ahead and post suggestions and ideas (even solutions to problems!) via github as <a href="https://github.com/satnogs">issues in our repositories</a>!</p>
+        <p class="lead">SatNOGS uses a mailing list to coordinate all development efforts. <a href="http://lists.satnogs.org/listinfo/dev">Sign up now!</a></p>
+        <p class="lead">You may directly contact the SatNOGS team using our email info (at) satnogs.org</p>
+        <p class="lead">Or you can go ahead and post suggestions and ideas (even solutions to problems!) via github as <a href="https://github.com/satnogs">issues in our repositories</a>!</p>
       </div>
 
       <hr class="featurette-divider">
