Update website info with more documentation.

--- a/hardware.html
+++ b/hardware.html
@@ -84,6 +84,7 @@
           <h4 class="featurette-heading">Tracking mechanism<br><span class="text-muted">Printable, parametric</span></h4>
           <p class="lead">Our tracking mechanism is designed from scratch, parametric by default, 3D printed in under 8 hours. Utilizing two NEMA14 stepper motors we have uncostrained movement in Altitude and Azimuth.</p>
           <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Tracking%20box" role="button">View designs</a></p>
+          <p><a class="btn btn-default btn-primary" href="http://satnogs.dozuki.com/c/SatNOGS_Hardware" role="button">View instructions</a></p>
         </div>
       </div>
 
@@ -108,8 +109,9 @@
         </div>
         <div class="col-md-7">
           <h4 class="featurette-heading">Antennas<br><span class="text-muted">Custom, modular</span></h4>
-          <p class="lead">Lightweight antennas designed to meet satellite communication specifications. SatNOGS includes designs and how-tos for 70cm and 2m band Yagi antennas. Parabolic antenna design is in the works too.</p>
-          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Yagi%20antenna" role="button">View designs</a></p>
+          <p class="lead">Lightweight antennas designed to meet satellite communication specifications. SatNOGS includes designs and how-tos for 70cm and 2m band Yagi and Helical antennas. Parabolic antenna design is in the works too.</p>
+          <p><a class="btn btn-default btn-primary" href="https://github.com/satnogs/satnogs-hardware/tree/master/Antennas" role="button">View designs</a></p>
+          <p><a class="btn btn-default btn-primary" href="http://satnogs.dozuki.com/c/SatNOGS_Antennas" role="button">View instructions</a></p>
         </div>
       </div>
 
