--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>A work in progress.</h1>
-              <p>Part of NASA's <a href="https://2014.spaceappschallenge.org">SpaceAppsChallenge 2014</a>, we set off to create a solution for the <a href="https://2014.spaceappschallenge.org">Ground Station Platform challenge</a>. We are moving fast so keep checking this page!</p>
-              <p><a class="btn btn-lg btn-primary" href="https://github.com/satnogs" role="button">See our code</a></p>
+              <p>SatNOGS is a vibrant community of contributors from around the world. We are moving fast so keep checking this page!</p>
+              <p><a class="btn btn-lg btn-primary" href="http://hackaday.io/project/1340-SatNOGS" role="button">Check our logs!</a></p>
             </div>
           </div>
         </div>
