Update website with links and pics.

--- a/documentation.html
+++ b/documentation.html
@@ -69,7 +69,10 @@
       <div class="container main-text">
         <h2 class="featurette-heading">Intro</h2>
         <p class="lead">SatNOGS is a modular and scalable stack for Satellite Ground Station implementation. Fully based on open source technologies and open standards, it provides interoperability with existing or future subsystems.</p>
-        <h2 class="featurette-heading">The Stack</h2>
+        <h2 class="featurette-heading">The Options</h2>
+        <p class="lead">You can choose the configuration that suits you best and be part of the SatNOGS project.</p>
+        <img src="./img/options.jpg">
+        <h2 class="featurette-heading">The Default Stack</h2>
         <p class="lead">The stack can be vizualized as follows:</p>
         <div class="container stack">
           <a href="./img/stack.png">
