--- a/team.html
+++ b/team.html
@@ -74,14 +74,14 @@
           <ul class="lead">
             <li>Ioannis Charitopoulos <span class="area">(prediction & tracking software, APIs)</span></li>
             <li>Theodore Dimitriou <span class="area">(tracking mechanism design)</span></li>
+            <li>Giannis Giannelos <span class="area">(software development for network and db)</span></li>
             <li>Themistoklis Karafasoulis <span class="area">(antenna construction)</span></li>
             <li>Dimitrios Papadeas <span class="area">(tripod design and 3D printing)</span></li>
             <li>Pierros Papadeas <span class="area">(documentation, website and hardware design)</span></li>
             <li>Manthos Papamatthaiou <span class="area">(tracking mechanism design and 3D printing)</span></li>
-            <li>Nikos Roussos <span class="area">(Web enabled SDR setup)</span></li>
+            <li>Nikos Roussos <span class="area">(software development for network and db)</span></li>
             <li>Vasilis Tsiligiannis <span class="area">(antenna design, SDR and tracking setup)</span></li>
             <li>Agisilaos Zisimatos <span class="area">(tracking harware design and arduino code)</span></li>
-            <li>Giannis Giannelos <span class="area">(software development for network and db)</span></li>
           </ul>
           <img id="team" src="./img/carusel_1.jpg">
         </p>
